--- a/ConsoleApp1/ConsoleApp3/App.config
+++ b/ConsoleApp1/ConsoleApp3/App.config
@@ -6,12 +6,15 @@
 	<!-- Log4net Logging Setup -->
 		<log4net debug="true">
 			<appender name="FileAppender" type="log4net.Appender.FileAppender,log4net">
-				<file value="D:\auto\log\Log.txt" />
+				<file value="D:\\auto\\log\\Logfile.txt" />
 				<!-- the location where the log file would be created -->
 				<appendToFile value="true" />
 				<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 				<layout type="log4net.Layout.PatternLayout">
-					<conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+					<conversionPattern value="----------------------------------------------------------
+								   -----------------------------------------------------------------
+								   %newline %date [%thread] %newline%date %level %newline%date %logger - 
+								   %newline%date  %newline%message%newline" />
 				</layout>
 				<filter type="log4net.Filter.LevelRangeFilter">
 					<levelMin value="INFO" />
