--- a/ConsoleApp1/ConsoleApp3/App.config
+++ b/ConsoleApp1/ConsoleApp3/App.config
@@ -6,15 +6,17 @@
 	<!-- Log4net Logging Setup -->
 		<log4net debug="true">
 			<appender name="FileAppender" type="log4net.Appender.FileAppender,log4net">
-				<file value="D:\\auto\\log\\Logfile.txt" />
+				<file value="D:\\auto\\log\\Logfile5.txt" />
 				<!-- the location where the log file would be created -->
 				<appendToFile value="true" />
 				<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 				<layout type="log4net.Layout.PatternLayout">
 					<conversionPattern value="----------------------------------------------------------
 								   -----------------------------------------------------------------
-								   %newline %date [%thread] %newline%date %level %newline%date %logger - 
-								   %newline%date  %newline%message%newline" />
+								   %newline%date [%thread] %newline%date %level %newline%date %logger - 
+								   %newline%date  %newline %message %newline  %newline%date %aspnet-context
+								   %newline%date %type  %newline%date %aspnet-request  %newline%date %aspnet-session 
+								   %newline%date %file  %newline %line %newline %property " />
 				</layout>
 				<filter type="log4net.Filter.LevelRangeFilter">
 					<levelMin value="INFO" />
@@ -23,6 +25,11 @@
 			</appender>
 			<root>
 				<level value="DEBUG" />
+				<!--<level value="Info" />
+				<level value="Warn" />
+				<level value="Error" />
+				<level value="Fatal" />-->
+				<!--<level value="All" />-->
 				<appender-ref ref="FileAppender" />
 			</root>
 		</log4net>
