--- a/ConsoleApp1/ConsoleApp3/ConsoleApp3.csproj
+++ b/ConsoleApp1/ConsoleApp3/ConsoleApp3.csproj
@@ -69,6 +69,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Dropdowbox.cs" />
+    <Compile Include="Dropdownbox_2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
