--- a/ConsoleApp1/ConsoleApp3/ConsoleApp3.csproj
+++ b/ConsoleApp1/ConsoleApp3/ConsoleApp3.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Mouse_Click_Keyboard.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Waiting.cs" />
     <Compile Include="XPath_Example.cs" />
   </ItemGroup>
   <ItemGroup>
