--- a/ConsoleApp1/ConsoleApp2/ConsoleApp2.csproj
+++ b/ConsoleApp1/ConsoleApp2/ConsoleApp2.csproj
@@ -76,7 +76,9 @@
     <Compile Include="Click_on_image.cs" />
     <Compile Include="CSS.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Prompt_Alerts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Uploadfile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
